--- a/src/app/(withCommonLayout)/project/project.module.css
+++ b/src/app/(withCommonLayout)/project/project.module.css
@@ -19,3 +19,10 @@
   height: 14px;
   background: linear-gradient(to-right, white, #343434);
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .projectImage {
+    width: 200px;
+    height: 270px;
+  }
+}
