--- a/src/app/(withCommonLayout)/project/project.module.css
+++ b/src/app/(withCommonLayout)/project/project.module.css
@@ -1,6 +1,6 @@
 .projectImage {
-  width: 300px;
-  height: 315px;
+  width: 350px;
+  height: 300px;
 
   background-size: cover;
   background-position-y: 0%;
@@ -10,7 +10,7 @@
 .projectImage:hover {
   background-position: 100%;
 }
-.projectImage::before {
+/* .projectImage::before {
   content: "";
   width: 100%;
   position: absolute;
@@ -18,7 +18,7 @@
   left: 0;
   height: 14px;
   background: linear-gradient(to-right, white, #343434);
-}
+} */
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .projectImage {
